--- a/public/lang/pl.json
+++ b/public/lang/pl.json
@@ -1,5 +1,11 @@
 {
   "empty": "Puste",
   "footer": "Zrobione przez kittech",
-  "aboutme": "Cześć, jestem kittech. Moje hobby to programowanie i teologia. Obecnie jestem studentem informatyki i planuję zostać informatykiem. Moim ulubionym językiem programowania jest \uD83E\uDD80rust\uD83E\uDD80, a na laptopie używam Fedora Linux."
+  "aboutme": "Cześć, jestem kittech. Moje hobby to programowanie i teologia. Obecnie jestem studentem informatyki i planuję zostać informatykiem. Moim ulubionym językiem programowania jest \uD83E\uDD80rust\uD83E\uDD80, a na laptopie używam Fedora Linux.",
+  "main_nav": "Głowna strona",
+  "aboutme_nav": "O mnie",
+  "places_nav": "Miejsca",
+  "distributism_nav": "Dystrybucjonizm",
+  "books_nav": "Książki",
+  "projects_nav": "Projekty"
 }
